package com.example.betaware.model.enums;

public enum Perfil {
    USER,
    ADMIN
} 