package com.example.betaware.model.enums;

public enum ResultadoAposta {
    GANHOU,
    PERDEU,
    PENDENTE,
    CANCELADA
} 